RESOLVED FIXED286678
[WebInspector] assert in NetworkResourcesData with resources containing an UTF8 NBSP character
https://bugs.webkit.org/show_bug.cgi?id=286678
Summary [WebInspector] assert in NetworkResourcesData with resources containing an UT...
Przemyslaw Gorszkowski
Reported 2025-01-29 06:44:18 PST
The assert crash was reported in https://github.com/WebKit/WebKit/pull/37536#discussion_r1933940319 The assert is wrong there. It can be removed. The size of decoded data can be smaller than input in some specific situation.
Attachments
Przemyslaw Gorszkowski
Comment 1 2025-01-29 13:34:47 PST
EWS
Comment 2 2025-01-29 22:49:50 PST
Committed 289547@main (2a3c800a3d23): <https://commits.webkit.org/289547@main> Reviewed commits have been landed. Closing PR #39713 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-29 22:50:16 PST
Note You need to log in before you can comment on or make changes to this bug.