Cherry-pick 289547@main (2a3c800a3d23). https://bugs.webkit.org/show_bug.cgi?id=286678

[WebInspector] assert in NetworkResourcesData with resources containing an UTF8 NBSP character
    https://bugs.webkit.org/show_bug.cgi?id=286678

    Reviewed by Devin Rousso.

    The assert in NetworkResourcesData::ResourceData::decodeDataToContent is
    incorrect because there can be situations that the content after
    decoding is smaller than the input, so this assert can be removed.

    * Source/WebCore/inspector/NetworkResourcesData.cpp:
    (WebCore::NetworkResourcesData::ResourceData::decodeDataToContent):

    Canonical link: https://commits.webkit.org/289547@main

Canonical link: https://commits.webkit.org/282416.438@webkitglib/2.46